feat: add a feature to ask about additional free product when available